--- a/latex/references.bib
+++ b/latex/references.bib
@@ -18,4 +18,16 @@
   doi     = {10.1017/S0515036100008478}
 }
 
+@Article{Gelman1992,
+  author    = {Gelman, Andrew and Rubin, Donald B.},
+  journal   = {Statistical Science},
+  title     = {Inference from Iterative Simulation Using Multiple Sequences},
+  year      = {1992},
+  number    = {4},
+  pages     = {457--472},
+  volume    = {7},
+  doi       = {10.1214/ss/1177011136},
+  publisher = {Institute of Mathematical Statistics},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
